# hadith-research-backend

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  arabic_cli.py  audit.bat  cli.py  pyproject.toml  requirements.txt  sample-tahdhib.bat  setup.bat  setup.sh  update-semantic.bat  update.bat
app/: config.py  desktop.py  jobs.py  main.py  models.py  notebook.py
app/arabic/: data.py  exercises.py  iraab.py  morphology.py  phonology.py  tajweed.py  text.py  web.py
app/arabic/knowledge/: awzan.json  exercises.json  letters.json  levels.json  nahw.json  sifat.json  tajweed.json  verbs.json  vocabulary.json
app/arabic/static/: index.html
app/ingestion/: catalog.py
app/parsing/: appraisals.py  book_pdf.py  grading.py  hadith_extract.py  html_clean.py  isaba_extract.py  isnad_matn.py  jarh_extract.py  lisan_extract.py  matn_audit.py  normalize.py  rijal_extract.py  sair_extract.py  tahdhib_extract.py  tarikh_islam_extract.py  thiqat_extract.py
app/pipeline/: assembler.py  i18n.py  image_gen.py  nahw.py  orchestrator.py  subtitles.py  templates.py  tts.py  visuals.py
app/qa/: answer.py  dossier.py  illal.py  isnad.py  llm.py  rulings.py  takhrij.py
app/rijal/: canon.py  companions.py  dedup.py  grades.py  graph.py  index.py  llm_source.py  qaida.py  resolve.py  seed.jsonl  tahdhib.py
app/routers/: admin.py  ask.py  books.py  health.py  narrators.py  notebook.py  reader.py  search.py  takhrij.py  verify_isnad.py
app/search/: __init__.py  embeddings.py  grouping.py  hybrid.py  index.py  vectors.py
app/static/: index.html
docs/: ARCHITECTURE.md  AUDIT.md  DISAMBIGUATION_FINDINGS.md  RELEASE_NOTES.ar.md  RELEASE_NOTES.md  ROADMAP.md  TAHDHIB.md  app_screenshot.py  architecture_diagram.py  make_project_doc.py
docs/arabic/: README.md
scripts/: _atomic.py  audit_companions.py  audit_coverage.py  audit_duplicates.py  audit_isnad.py  audit_matn.py  audit_nodes.py  build_graph.py  build_rijal.py  build_rijal_llm.py  compare_company.py  derive_qaida.py  download_voices.py  embed.py  find_book.py  index.py  ingest.py  list_books.py  make_social.py  make_social_dividers.py  make_social_tech.py  make_social_tech_sq.py  measure_dedup.py  parse.py  peek_chapters.py  peek_conarrators.py  peek_entry.py  peek_headings.py  peek_matn.py  peek_missing_chapters.py  peek_sair.py  peek_sair_coverage.py  peek_tarikh_islam.py  probe_name.py  sample_source.py  setup_local.sh  update.py
tests/: test_admin_reload.py  test_api.py  test_api_robustness.py  test_appraisals.py  test_arabic.py  test_ask.py  test_audit_companions.py  test_audit_coverage.py  test_audit_nodes.py  test_books.py  test_build_rijal_llm.py  test_canon.py  test_catalog.py  test_dedup.py  test_derive_qaida.py  test_double_opinion.py  test_embed_incremental.py  test_graph.py  test_hybrid.py  test_illal.py  test_isaba_extract.py  test_isnad.py  test_isnad_matn_split.py  test_jarh_extract.py  test_lisan_extract.py  test_llm.py  test_llm_source.py  test_llm_sources.py  test_matn_audit.py  test_narrators.py  test_negation.py  test_normalize.py  test_notebook.py  test_parse_grade_heading.py  test_parsing.py  test_pipeline.py  test_production.py  test_qaida.py  test_reader.py  test_resolve.py  (+14 more)
